// SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: Apache-2.0
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package workflows.v1;

option go_package = "github.com/nvidia/bare-metal-manager-rest/workflow-schema/proto";

import "google/protobuf/timestamp.proto";

// WorkflowStatus - response status
enum WorkflowStatus {
  WORKFLOW_STATUS_UNSPECIFIED = 0;
  WORKFLOW_STATUS_CREATED = 1;
  WORKFLOW_STATUS_IN_PROGRESS = 2;
  WORKFLOW_STATUS_REQUEUED = 3;
  WORKFLOW_STATUS_SUCCESS = 4;
  WORKFLOW_STATUS_FAILURE = 5;
}

// WorkflowPolicy - policies of siteagent workflow
enum WorkflowPolicy {
  WORKFLOW_POLICY_UNSPECIFIED = 0;
  WORKFLOW_POLICY_DELETE_ON_FAILURE = 1;
  WORKFLOW_POLICY_ASYNC_NOTIFY = 2;
}

// WorkflowOptions - options for executing workflows
// TODO: Fix typo in attribute name
message WorkflowOptions {
  optional int32 retry_count = 1;
  optional int32 retry_int32erval = 2;
  optional WorkflowPolicy policy = 3;
}

// TransactionID - Identity for temporal workflow
message TransactionID {
  // Object ID of the resource
  string resource_id = 1;
  // Microsecond timestamp for object serialization
  google.protobuf.Timestamp timestamp = 2;
}

// ObjectStatus - response status
enum ObjectStatus {
  OBJECT_STATUS_UNSPECIFIED = 0;
  OBJECT_STATUS_CREATED = 1;
  OBJECT_STATUS_IN_PROGRESS = 2;
  OBJECT_STATUS_DELETED = 3;
  OBJECT_STATUS_UPDATED = 4;
  OBJECT_STATUS_READY = 5;
}

// InventoryStatus - response status for inventory collection
enum InventoryStatus {
  INVENTORY_STATUS_UNSPECIFIED = 0;
  INVENTORY_STATUS_SUCCESS = 1;
  INVENTORY_STATUS_FAILED = 2;
}

// InventoryPage - pagination information about inventory
message InventoryPage {
  // Total number of pages
  int32 total_pages = 1;
  // Current page number
  int32 current_page = 2;
  // Number of items per page
  int32 page_size = 3;
  // Total number of items
  int32 total_items = 4;
  // IDs of all items
  repeated string item_ids = 5;
}
